--- a/client/src/components/descriptionBox/DescriptionBox.css
+++ b/client/src/components/descriptionBox/DescriptionBox.css
@@ -1,11 +1,12 @@
-.descriptionbox{
-    margin:120px 170px;
-}
-.descriptionbox-navigator{
-    display: flex;    
+.descriptionbox {
+    margin: 120px 170px;
 }
 
-.descriptionbox-nav-box{
+.descriptionbox-navigator {
+    display: flex;
+}
+
+.descriptionbox-nav-box {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,15 +17,29 @@
     border: 1px solid #d0d0d0;
 }
 
-.descriptionbox-nav-box.fade{
+.descriptionbox-nav-box.fade {
     background: #fbfbfb;
     color: #555
 }
 
-.descriptionbox-description{
-    display:flex;
+.descriptionbox-description {
+    display: flex;
     flex-direction: column;
     gap: 25px;
     border: 1px solid #d0d0d0;
     padding: 48px 48px 70px 48px;
+}
+
+@media (max-width: 1280px) {
+    .descriptionbox{
+        margin: 60px;
+    }
+}
+@media (max-width: 800px) {
+    .descriptionbox{
+        margin: 60px 20px;
+    }
+    .descriptionbox-description{
+        font-size: 14px;
+    }
 }
